Bug 39828 - Writer table not calculating correctly if Tracked Changes shown
Summary: Writer table not calculating correctly if Tracked Changes shown
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.3 inReleaseNotes
Keywords:
: 45296 (view as bug list)
Depends on:
Blocks: Writer-Tables Writer-Tables-Formulas Track-Changes-Table
  Show dependency treegraph
 
Reported: 2011-08-04 07:41 UTC by rene.zw
Modified: 2021-12-30 06:15 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
short sample of the problem descibed above (9.35 KB, application/vnd.oasis.opendocument.text)
2011-08-04 07:41 UTC, rene.zw
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rene.zw 2011-08-04 07:41:43 UTC
Created attachment 49916 [details]
short sample of the problem descibed above

If a writer table is used and the change tracking is activated and visible, the calculation is wrong. It uses the whole entry of the cell instead of the part which is not strikethrough.
Comment 1 Jeffrey 2011-08-04 19:34:48 UTC
Reproduced on LibreOffice 3.4  340m1(Build:103) for OpenSuse Linux.
Comment 2 Björn Michaelsen 2011-12-23 12:24:19 UTC Comment hidden (obsolete)
Comment 3 sasha.libreoffice 2012-01-08 21:36:41 UTC Comment hidden (obsolete)
Comment 4 A (Andy) 2013-05-03 22:03:35 UTC Comment hidden (obsolete)
Comment 5 sasha.libreoffice 2013-05-04 07:15:04 UTC
reproduced in Version 4.0.2.2 on Fedora 64 bit
Steps to reproduce:
0. Open attached document
1. Place text cursor into empty cell of table
2. Click button "Sum" (looks like Greek "sigma") on toolbar "Table"
3. Select all cells with numbers and press Enter
Expected: number 2040
Actually: number 4030
Comment 6 A (Andy) 2013-05-04 07:35:52 UTC
@Sasha: Thanks, now I understood it and can confirm it.

-> reproducible with LO 4.0.2.2 (Win7 Home, 64bit)
Comment 7 QA Administrators 2015-03-04 02:21:27 UTC Comment hidden (obsolete)
Comment 8 Buovjaga 2015-03-22 14:14:46 UTC
(In reply to sasha.libreoffice from comment #5)
> reproduced in Version 4.0.2.2 on Fedora 64 bit
> Steps to reproduce:
> 0. Open attached document
> 1. Place text cursor into empty cell of table
> 2. Click button "Sum" (looks like Greek "sigma") on toolbar "Table"
> 3. Select all cells with numbers and press Enter
> Expected: number 2040
> Actually: number 4030

Reproduced.

Win 7 Pro 64-bit, LibO Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Locale: fi_FI
Comment 9 QA Administrators 2016-09-20 10:01:36 UTC Comment hidden (obsolete)
Comment 10 Roman Kuznetsov 2018-07-28 19:58:44 UTC
Mike, look at this bug please. For me it looks as result doesn't auto recalculate when we delete data in cells in mode "change tracking". 
Important: delete data should another author!
ps: if we accept all changes, then result will be wrong whatever.
Comment 11 Timur 2018-08-03 10:28:32 UTC Comment hidden (obsolete)
Comment 12 Timur 2018-09-07 15:27:23 UTC
*** Bug 45296 has been marked as a duplicate of this bug. ***
Comment 13 QA Administrators 2021-06-02 03:47:44 UTC Comment hidden (obsolete)
Comment 14 Timur 2021-06-02 06:58:25 UTC Comment hidden (obsolete)
Comment 15 BogdanB 2021-08-22 09:55:37 UTC
Repro 7.3
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 5b025285b3528910a4360899abb2bbbaadc72c97
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 16 Commit Notification 2021-09-21 15:43:45 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/915d3eebc1dc4f18d7a1992db801ee8313ee46c0

tdf#39828 sw: fix table formula calculation at track changes

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 NISZ LibreOffice Team 2021-10-04 10:30:48 UTC
Verified in: 

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: c2de581d1943df2d84f2b71817b6a8bee41f0217
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 18 Commit Notification 2021-10-05 08:17:36 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/bf62462b748c1842b50abb5152e3318d5028e1ca

tdf#39828 sw: fix table formula calculation at track changes

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 stragu 2021-12-30 06:15:37 UTC
Reviewing 7.3 release notes.

Also verified as fixed on Ubuntu 18.04 with:

Version: 7.3.0.1 / LibreOffice Community
Build ID: 840fe2f57ae5ad80d62bfa6e25550cb10ddabd1d
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded