tdf#39828 sw: fix table formula calculation at track changes

Tracked deleted cell content, e.g. removed digits
of the numbers were used in calculation.

Change-Id: Iecc91585cd37be3647d85f97ba1716a5fc836242